fixeds classes (BEM),  delete portfilio.main.scss
add section__title (delete .general-title)
add .logo__darck (delete .logo__darck)
add .footer-logo (delete .footer__logo)

--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,20 +1,20 @@
-.main-nav__logo {
+.logo {
   margin-right: 94px;
   @include sizeLOGO();
   color: $brand-color;
 }
 
-.main-nav__logo--color {
+.logo__darck {
   color: $brand-black-color;
 }
 
-.footer__logo {
+.footer-logo {
   margin-bottom: 20px;
   color: $brand-color;
   @include sizeLOGO();
   cursor: default;
 }
 
-.footer__logo--color {
+.footer-logo__white {
   color: $white-color;
 }
