--- a/css/main.css
+++ b/css/main.css
@@ -325,7 +325,11 @@ p {
   padding: 0 15px;
 }
 
-.general-title {
+.section {
+  padding: 94px 0;
+}
+
+.section__title {
   margin-bottom: 35px;
   color: #212121;
   font-weight: 700;
@@ -334,11 +338,7 @@ p {
   text-align: center;
 }
 
-.section {
-  padding: 94px 0;
-}
-
-.main-nav__logo {
+.logo {
   margin-right: 94px;
   font-family: 'raleway', sans-serif;
   font-weight: 700;
@@ -348,11 +348,11 @@ p {
   color: #2196f3;
 }
 
-.main-nav__logo--color {
+.logo__darck {
   color: #000000;
 }
 
-.footer__logo {
+.footer-logo {
   margin-bottom: 20px;
   color: #2196f3;
   font-family: 'raleway', sans-serif;
@@ -363,7 +363,7 @@ p {
   cursor: default;
 }
 
-.footer__logo--color {
+.footer-logo__white {
   color: #ffffff;
 }
 
@@ -625,13 +625,45 @@ p {
   border-radius: 4px;
 }
 
+.filters {
+  display: flex;
+  margin-bottom: 50px;
+  justify-content: center;
+}
+
+.filters__item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.filters__button {
+  display: inline-block;
+  padding: 6px 22px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  background-color: #f5f4fa;
+  text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.filters__button:hover, .filters__button:focus {
+  background-color: #2196f3;
+  color: #ffffff;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+
 .header {
   padding-top: 24px;
   padding-bottom: 24px;
   border-bottom: 1px solid #ececec;
 }
 
-.header_container {
+.header__container {
   display: flex;
   align-items: center;
 }
@@ -666,7 +698,7 @@ p {
   color: #2196f3;
 }
 
-.site-nav__link.active::after {
+.site-nav__link.site-nav__link--active::after {
   position: absolute;
   content: '';
   width: 100%;
@@ -677,7 +709,7 @@ p {
   background: #2196f3;
 }
 
-.active {
+.site-nav__link--active {
   color: #2196f3;
 }
 
@@ -734,7 +766,7 @@ p {
   padding-bottom: 200px;
 }
 
-.hero--img {
+.hero {
   max-width: 1600px;
   height: 600px;
   margin-left: auto;
@@ -755,10 +787,6 @@ p {
 }
 
 .features {
-  background-color: #ffffff;
-}
-
-.features__list {
   display: flex;
 }
 
@@ -892,6 +920,95 @@ p {
 .clients__link:focus {
   border: 1px solid #2196f3;
   fill: #2196f3;
+}
+
+.portfolio {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
+}
+
+.portfolio__item {
+  margin-left: 30px;
+  margin-top: 30px;
+  outline: 1px solid #eeeeee;
+}
+
+.portfolio__link {
+  display: flex;
+  flex-direction: column;
+}
+
+.portfolio__link:hover, .portfolio__link:focus {
+  outline: 1px solid #eeeeee;
+  box-sizing: border-box;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.portfolio__foto {
+  position: relative;
+  overflow: hidden;
+}
+
+.thumb {
+  display: inline-block;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.thumb:hover, .thumb:focus {
+  opacity: 1;
+}
+
+.portfolio__link:hover .thumb,
+.portfolio__link:focus .thumb {
+  transform: translateY(0);
+}
+
+.thumb__text {
+  padding: 63px 24px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio__link:hover .thumb__text,
+.portfolio__link:focus .thumb__text {
+  opacity: 1;
+}
+
+.portfolio-box {
+  padding: 20px 24px;
+}
+
+.portfolio-box__title {
+  margin-bottom: 4px;
+  color: #212121;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.portfolio-box__text {
+  color: #757575;
+  font-size: 16px;
+  line-height: 1.8;
+  letter-spacing: 0.03em;
 }
 
 .footer {
