--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -1,3 +1,14 @@
 .section {
   padding: 94px 0;
 }
+
+.section__title {
+  margin-bottom: 35px;
+
+  color: $secondary-bg-color;
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+}
