--- a/sass/layout/header/_page-header-main-nav.scss
+++ b/sass/layout/header/_page-header-main-nav.scss
@@ -26,20 +26,20 @@
   &:focus {
     color: $brand-color;
   }
+
+  &.site-nav__link--active::after {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 4px;
+    top: 44px;
+    left: 0;
+
+    border-radius: 2px;
+    background: $brand-color;
+  }
 }
 
-.site-nav__link.active::after {
-  position: absolute;
-  content: '';
-  width: 100%;
-  height: 4px;
-  top: 44px;
-  left: 0;
-
-  border-radius: 2px;
-  background: $brand-color;
-}
-
-.active {
+.site-nav__link--active {
   color: $brand-color;
 }
