--- a/sass/layout/main/_page-main-hero.scss
+++ b/sass/layout/main/_page-main-hero.scss
@@ -7,17 +7,17 @@
   text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
-}
 
-.hero--img {
-  max-width: 1600px;
-  height: 600px;
-  margin-left: auto;
-  margin-right: auto;
-  background-image: linear-gradient($rgba-hero), url(../img/hero.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+  & {
+    max-width: 1600px;
+    height: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    background-image: linear-gradient($rgba-hero), url(../img/hero.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
 }
 
 .hero__title {
