--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,7 +7,6 @@
 @import './base/modern-normalize';
 @import './base/commons';
 @import './base/container';
-@import './base/genetral-title';
 @import './base/section';
 
 //COMPONENTS
@@ -15,6 +14,7 @@
 @import './components/hero-button';
 @import './components/team-social';
 @import './components/modal';
+@import './components/porfolio-filters';
 
 // LAYOUT
 // HEDER
@@ -27,6 +27,10 @@
 @import './layout/main/page-main-works';
 @import './layout/main/page-main-team';
 @import './layout/main/page-main-clients';
+
+// PORTFOLIO
+@import './layout/main/page-main-portfolio';
+
 //FOOTER
 @import './layout/footer/page-footer';
 @import './layout/footer/page-footer-left-box';
